# terminal-reader

./: Cargo.toml
src/: llm.rs  llm_low.rs  main.rs
