[package]
name = "terminal-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-openai = "0.18.2"
atty = "0.2.14"
clap = "3"
copypasta = "0.10.0"
dotenv = "0.15.0"
reqwest = "0.11.23"
secrecy = "0.8.0"
serde = "1.0.196"
tokio =  {version = "1.35.1",features = ["full"]}
